--- a/assets/scss/pages/front-page.scss
+++ b/assets/scss/pages/front-page.scss
@@ -102,6 +102,11 @@
          }
     }
     &__bio{
+        font-size: 1.09rem;
+        @screen maxlg { 
+            @apply text-base;
+
+       }
         b{
             @apply text-black;
         }
