--- a/assets/scss/pages/single-service.scss
+++ b/assets/scss/pages/single-service.scss
@@ -43,6 +43,7 @@
             }
         }
         figure{
+            margin: 0;
             video{
                 @apply w-full ; 
             }
