--- a/assets/scss/pages/single-service.scss
+++ b/assets/scss/pages/single-service.scss
@@ -43,7 +43,7 @@
             }
         }
         figure{
-            margin: 0;
+            margin: 0 !important ;
             video{
                 @apply w-full ; 
             }
