--- a/assets/scss/components/card.scss
+++ b/assets/scss/components/card.scss
@@ -1,6 +1,9 @@
 .card{
+    
     @apply bg-white w-full flex flex-col flex-no-wrap justify-between text-black outline-none; 
-     
+    &-image{
+      min-height: auto !important;
+    } 
     &-body{
         @apply pt-6 pb-0 px-3 bg-white flex-1; 
     }
